force-app/main/default/objects/HmK_OrderProduct__c/HmK_OrderProduct__c.object-meta.xml
<CustomObject>
    <label>HmK_OrderProduct</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HmK_OrderProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>