force-app/main/default/objects/HmK_OrderProduct__c/fields/OrderProduct_ID__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct_ID__c</fullName>
    <externalId>true</externalId>
    <label>OrderProduct ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>