force-app/main/default/objects/HmK_OrderProduct__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <label>Profit</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>