force-app/main/default/objects/HmK_OrderProduct__c/fields/Returned__c.field-meta.xml
<CustomField>
    <fullName>Returned__c</fullName>
    <formula>Order__r.Returned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returned</label>
    <type>Checkbox</type>
</CustomField>