force-app/main/default/objects/HmK_OrderProduct__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <label>Sales</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>