force-app/main/default/objects/HmK_OrderProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrderProduct_ID__c</columns>
    <columns>Order__c</columns>
    <columns>Product__c</columns>
    <columns>Returned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>